--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
+    "@notionhq/client": "^2.3.0",
+    "@supabase/supabase-js": "^2.49.4",
     "framer-motion": "^10.18.0",
+    "katex": "^0.16.22",
     "next": "14.0.0",
+    "notion-client": "^7.3.0",
+    "notion-utils": "^7.3.0",
+    "prismjs": "^1.30.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-notion-x": "^7.3.0",
+    "recharts": "^2.15.3",
     "sharp": "^0.34.1",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@types/react": "^19.1.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3"
   }
